@@ -1045,3 +1045,4 @@ Updated the phpMyAdmin script installer to version 3.1.2, TextPattern to 4.0.8, 
 Added the info.pl command line script, for dumping general information about Virtualmin.
 Links to per-domain SpamAssassin configurations now include the domain's config file, which allows each domain's settings to be separately managed.
 Automatic spam and virus folder clearing now respects custom folder names.
+When a domain is restore on a system with a different Apache log file location, its virtualhost is updated to use the target system's paths.
